--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -437,7 +437,7 @@
 								[/filter]
 							[/have_location]	
 							[then]
-								{NFWME_broken_wind_WOUND}
+								{NFWME_broken_wing_WOUND}
 							[/then]
 							[else]
 								[fire_event]
