--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -13,8 +13,8 @@
 
 	[remove_object]
 		{EVENT_UNIT}
-		ability=broken_wind_display_healing
-		object_id=broken_wind
+		ability=broken_wing_display_healing
+		object_id=broken_wing
 	[/remove_object]
 	
 	[remove_object]
