--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -52,17 +52,17 @@
 	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Broken Arm" {NFWME_COLOR_RED}}
 #enddef
 
-#define NFWME_broken_wind_WOUND
+#define NFWME_broken_wing_WOUND
     [modify_unit]
 		{FILTER_EVENT_UNIT}
 		[object]
-			id=broken_wind
+			id=broken_wing
 			[effect]
 				apply_to=new_ability
 				[abilities]
 					[display]
-						id=broken_wind_display
-						name="<span color='#DA0000'>"+_"broken wind"+"</span>"
+						id=broken_wing_display
+						name="<span color='#DA0000'>"+_"broken wing"+"</span>"
 						description=_"Movement points -20%"
 					[/display]
 				[/abilities]
@@ -74,13 +74,13 @@
 			[effect]
 				apply_to=new_advancement
 					[advancement]
-						id=NFWME_broken_wind_Healing
-						description=_ "Recover from broken wind."
+						id=NFWME_broken_wing_Healing
+						description=_ "Recover from broken wing."
 						[effect]
 							apply_to=new_ability
 							[abilities]
 								[display]
-									id=broken_wind_display_healing
+									id=broken_wing_display_healing
 								[/display]
 							[/abilities]
 						[/effect]
@@ -88,7 +88,7 @@
 			[/effect]
 		[/object]
 	[/modify_unit]
-	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Broken Wind" {NFWME_COLOR_RED}}
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Broken Wing" {NFWME_COLOR_RED}}
 #enddef
 
 #define NFWME_broken_leg_WOUND
@@ -1330,14 +1330,9 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 			[/modify_unit]
 		[/else]
 	[/if]
-	[message]
-		speaker=narrator
-		message="Variación $unit.undead_variation Color $side_color[0].color"
-		side_for=$side_number
-		image="units/human-loyalists/duelist-die5.png"
-	[/message]
 	
 	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Zombie" {NFWME_COLOR_RED}}
+	{CLEAR_VARIABLE side_color}
 #enddef
 
 #define NFWME_wild_magic_WOUND
