--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -13,7 +13,7 @@
         side_for=$side_number
 		image="units/human-loyalists/duelist-die5.png"
         [option]
-			label="‣ "+_"List of Wounds and healing method"
+			label="‣ "+_"List of Wounds"
 			default=yes
             [command]
                 [message]
@@ -22,30 +22,54 @@
 
 * <b><i>Wound</i> (effect) > Possible destination units, previous conditions</b>
 
-* <i>Amnesia</i> (loses 2 xp/round) > All units, random
+* <i>Amnesia</i> (loses 2 xp/turn) > All units, random
+* <i>Short-term memory loss</i> (resets experience) > Units with more than 1/2 of the max experience, random
 * <i>Broken arm</i> (-20% non-magical damage) > Races with arms, random
-* <i>Broken wind</i> (-20% mp) > Races with winds, random
+* <i>Broken wing</i> (-20% mp) > Races with wings, random
 * <i>Broken leg</i> (-20% mp) > Races with legs, random
-* <i>Broken rib</i> (-30% impact resistance) > Not mechanical, killed with impact attack
-* <i>Burned</i> (-30% fire resistance) > All units, killed with fire attack
+* <i>Broken rib</i> (-30% impact resistance) > Not mechanical or spirits, wounded with impact attack
+* <i>Burned</i> (-30% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire
 * <i>Captured</i> (increased recall cost based on level) > All units, random
 * <i>Concussion</i> (-20% magical damage) > Units with magical attacks, random
+* <i>Wild magic</i> (magical attacks now are 50% chance) > Units with magical attacks, random
 * <i>Coward</i> (-15% accuracy) > Not mechanical, random
-* <i>Fear of weapon</i> (reduced 1 strikes against what wounded them) > Not mechanical, killed with any weapon
-* <i>Fear of the dark/light</i> (reduced 1 strikes during the time they were wounded) > Not mechanical, killed on day, night, or underground
-* <i>Fear of terrain</i> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, killed on some terrains
-* <i>Frostbite</i> (-30% cold resistance) > All units, killed with ice attack
-* <i>Gash</i> (-30% blade resistance) > ALl units, killed with blade attack
+* <i>Fear of weapon</i> (reduced 1 strikes against what wounded them) > Not mechanical, wounded with any weapon
+* <i>Fear of the dark/light</i> (reduced 1 strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground
+* <i>Fear of terrain</i> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains
+* <i>Frostbite</i> (-30% cold resistance) > All units, wounded with ice attack or on a cold terrain
+* <i>Gash</i> (-30% blade resistance) > All units, wounded with blade attack
 * <i>Infection</i> (10% chance to be poisoned every turn) > Not mechanical or not unpoisonable, random
 * <i>Sick</i> (20% chance of being slowed every turn) > All units, random
 * <i>Insanity</i> (berserk on melee attacks) > Units without berserk ability
 * <i>Maimed</i> (-20% hp) > All units, random
 * <i>Necrosis</i> (-30% arcane resistance) > Not mechanical, random
-* <i>Short-term memory loss</i> (resets experience) > Units with more than 1/2 of the max experience, random
-* <i>Wild magic</i> (magical attacks now are 50% chance) > Units with magic attack, random
-* <i>Plagued</i> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"+"
-
-"+_"<b>Wounds healing:</b>
+* <i>Plagued</i> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
+					side_for=$side_number
+					image="units/human-loyalists/duelist-die5.png"
+					[option]
+						label="‣ "+_"Back to help menu"
+						default=yes
+						[command]
+							[fire_event]
+								name=nfw_help_menu
+							[/fire_event]
+						[/command]
+					[/option]		
+					[option]
+						label="<b>"+_"Exit"+"</b>"
+						[command]
+						[/command]
+					[/option]
+                [/message]
+            [/command]
+		[/option]
+        [option]
+			label="‣ "+_"List of healing methods"
+			default=yes
+            [command]
+                [message]
+					speaker=narrator
+					message=_"<b>Wounds healing:</b>
 
 * <i>Fear of terrain</i>: 10% chance of recovery when defeating an opponent while standing on the terrain unit is scared of.
 * <i>Fear of weapon</i>: 20% chance of recovery when defeating an opponent wielding the weapon the unit is scared of.
@@ -73,7 +97,7 @@
 					[/option]
                 [/message]
             [/command]
-		[/option]	
+		[/option]
         [option]
 			label="‣ "+_"Change status of Wounds"
             [command]
@@ -151,8 +175,8 @@
 
 "+_"<b>Wounds list:</b>
 * Death (definitive death)
-* Turning into a ghost (custom ghost, can't advance beyond level 2) > Units that are not already spirits or ghosts
-* Turning into a zombie (custom zombie, heavily debuffed ranged attacks) > Units that are not already undead"
+* Turning into a ghost: -40% HP, spirit type movement, defenses and resistances, chaotic alignment, ranged attack changed to cold if not magical, arcane or fire, melee attack changed to arcane and with drain if not magical, cold or fire > Units that are not already spirits or ghosts
+* Turning into a zombie: -20% HP, slower, low arcane resistance,  chaotic alignment, plague on melee, -50% magical attacks damage, -25& ranged attacks damage, and poor markmanship on marksmans > Units that are not already undead"
         side_for=$side_number
 		image="units/human-loyalists/duelist-die5.png"
         [option]
@@ -339,7 +363,7 @@
             [/command]
         [/option]
         [option]
-            label="<b>"+_"Stop Non-Fatal Wounds for this scenario"+"</b>"
+            label="<b>‣ "+_"Stop Non-Fatal Wounds for this scenario"+"</b>"
             [command]
 			   [message]
 					speaker=narrator
