--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -29,7 +29,7 @@
 * <i>Broken leg</i> (-20% mp) > Races with legs, random
 * <i>Broken rib</i> (-30% impact resistance) > Not mechanical or spirits, wounded with impact attack
 * <i>Burned</i> (-30% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire
-* <i>Captured</i> (increased recall cost based on level) > All units, random
+* <i>Captured</i> (increased recall cost based on level) > All units, random but on leaders and heroes is much more probable
 * <i>Concussion</i> (-20% magical damage) > Units with magical attacks, random
 * <i>Wild magic</i> (magical attacks now are 50% chance) > Units with magical attacks, random
 * <i>Coward</i> (-15% accuracy) > Not mechanical, random
