--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -126,11 +126,11 @@
 	name=nfwme_rand_wound
 	id=nfwme_rand_wound_id
 	first_time_only=no
-	{VARIABLE_OP rand_wound rand(1..100)}
+	{VARIABLE_OP rand_wound rand(1..140)}
 	[switch]
 		variable=rand_wound
 		[case]
-			value=1,68
+			value=1,68,108
 			[if]
 				[have_location]
 					{EVENT_UNIT}
@@ -311,7 +311,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=5,6,7,99
+			value=5,6,7,106,109
 			[if]
 				{VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals ice}
 				[or]
@@ -364,7 +364,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=9,10,11,100
+			value=9,10,11,107,110
 			[if]
 				{VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals fire}
 				[or]
@@ -395,7 +395,7 @@
 				[have_location]
 					{EVENT_UNIT}
 					[filter]
-						race=horse,monster,wolf
+						race=horse,monster,wolf,bats,falcon,gryphon
 					[/filter]
 				[/have_location]
 				[or]
@@ -421,43 +421,44 @@
 						[/secondary_unit]		
 					[/fire_event]
 				[/then]
-				[elseif]
-					[have_location]
-						{EVENT_UNIT}
-						[filter]
-							race=bats,falcon,gryphon,drake
-						[/filter]
-					[/have_location]
-					[then]
-						[if]
-							[have_location]
-								{EVENT_UNIT}
-								[filter]
-									formula="max_moves <= 1"
-								[/filter]
-							[/have_location]	
-							[then]
-								{NFWME_broken_wing_WOUND}
-							[/then]
-							[else]
-								[fire_event]
-									name=nfwme_rand_wound
-									[primary_unit]
-										{EVENT_UNIT}
-									[/primary_unit]
-									[secondary_unit]
-										{EVENT_SECOND_UNIT}
-									[/secondary_unit]
-								[/fire_event]
-							[/else]
-						[/if]
-					[/then]
-				[/elseif]
 				[else]
 					{NFWME_broken_arm_WOUND}
 				[/else]
 			[/if]			
 		[/case]
+		[case]
+			value=111,112,113,114,115
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						race=bats,falcon,gryphon,drake
+					[/filter]
+				[/have_location]
+				[and]
+					[have_location]
+						{EVENT_UNIT}
+						[filter]
+							formula="max_moves > 1"
+						[/filter]
+					[/have_location]
+				[/and]
+				[then]
+					{NFWME_broken_wing_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{EVENT_SECOND_UNIT}
+						[/secondary_unit]
+					[/fire_event]
+				[/else]
+			[/if]
+		[/case]				
 		[case]
 			value=13
 			[if]
@@ -504,7 +505,7 @@
 			[/if]				
 		[/case]
 		[case]
-			value=14
+			value=116,117,118,119
 			[if]
 				{VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals impact}
 				[and]
@@ -546,7 +547,44 @@
 			[/if]			
 		[/case]
 		[case]
-			value=15,16,17
+			value=14
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						race=mechanical
+					[/filter]
+				[/have_location]
+				[or]
+					[have_location]
+						{EVENT_UNIT}
+						[filter]						
+							[filter_wml]
+								[movetype]
+									name=undeadspirit
+								[/movetype]
+							[/filter_wml]
+						[/filter]
+					[/have_location]							
+				[/or]							
+				[then]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{EVENT_SECOND_UNIT}
+						[/secondary_unit]		
+					[/fire_event]
+				[/then]
+				[else]
+					{NFWME_broken_rib_WOUND}
+				[/else]
+			[/if]			
+		[/case]
+		[case]
+			value=15,16,17,120
 			[if]
 				{VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals blade}
 				[then]
@@ -610,17 +648,9 @@
 				[have_location]
 					{EVENT_UNIT}
 					[filter]
-						race=mechanical
+						status=unpoisonable
 					[/filter]
-				[/have_location]
-				[or]
-					[have_location]
-						{EVENT_UNIT}
-						[filter]
-							status=unpoisonable
-						[/filter]
-					[/have_location]					
-				[/or]
+				[/have_location]					
 				[then]
 					[fire_event]
 						name=nfwme_rand_wound
@@ -638,6 +668,31 @@
 			[/if]					
 		[/case]
 		[case]
+			value=101,102,103,104,105
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+							status=poisoned
+					[/filter]
+				[/have_location]
+				[then]
+					{NFWME_infection_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{EVENT_SECOND_UNIT}
+						[/secondary_unit]		
+					[/fire_event]
+				[/else]
+			[/if]					
+		[/case]
+		[case]
 			value=20
 			{NFWME_amnesia_WOUND}
 		[/case]
@@ -646,7 +701,7 @@
 			{NFWME_captured_WOUND}
 		[/case]
 		[case]
-			value=71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98
+			value=71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100
 			[if]
 				{NFW_FILTER_HEROES}
 				[then]
@@ -691,7 +746,7 @@
 			[/if]	
 		[/case]
 		[case]
-			value=23
+			value=23,121,122
 			[if]
 				[have_location]
 					{EVENT_UNIT}
@@ -719,12 +774,37 @@
 			[/if]	
 		[/case]
 		[case]
-			value=24
+			value=24,123
 			{NFWME_maimed_WOUND}
 		[/case]	
 		[case]
 			value=25
 			{NFWME_sick_WOUND}
+		[/case]
+		[case]
+			value=124,125,126,127,128
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+							status=slowed
+					[/filter]
+				[/have_location]
+				[then]
+					{NFWME_sick_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwme_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{EVENT_SECOND_UNIT}
+						[/secondary_unit]		
+					[/fire_event]
+				[/else]
+			[/if]					
 		[/case]
 		[case]
 			value=26
@@ -752,12 +832,12 @@
 			[/if]			
 		[/case]
 		[case]
-			value=27,67
+			value=27,67,129,130,131,132
 			[if]
 				[have_location]
 					{EVENT_UNIT}
 					[filter]
-						formula="experience < (max_experience / 2)"
+						formula="experience < (max_experience / 1.5)"
 					[/filter]
 				[/have_location]
 				[then]
@@ -853,7 +933,7 @@
 			[/if]
 		[/case]
 		[case]
-			value=34,35,36,37,48,49,50,51,52,53,54,55,56,57
+			value=34,35,36,37,48,49,50,51,52,53,54,55,56,57,133,134,135,136,137,138,139,140
 			[if]
 				{NFWME_dead_ENABLED}
 				[or]
