--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -83,6 +83,9 @@
 	[modify_unit]
 		[filter]
 			ability=amnesia_dummy
+			[not]
+				x,y=recall,recall
+			[/not]
 		[/filter]
 		[effect]
 			apply_to=experience
