--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -183,6 +183,7 @@
 					[display]
 						id=burned_display
 						name="<span color='#DA0000'>"+_"burned"+"</span>"
+						female_name="<span color='#DA0000'>"+_"female^burned"+"</span>"
 						description=_"Fire resistance -30%"
 					[/display]
 				[/abilities]
@@ -198,7 +199,7 @@
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_burned_Healing
-						description= _"Recover from burned."
+						description= _"Recover from burn."
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -211,7 +212,7 @@
 			[/effect]
 		[/object]
 	[/modify_unit]
-	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Burned" {NFWME_COLOR_RED}}
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Burn" {NFWME_COLOR_RED}}
 #enddef
 
 #define NFWME_captured_WOUND
@@ -230,6 +231,7 @@
 					[display]
 						id=captured_unit_display
 						name="<span color='#DA0000'>"+_"captured"+"</span>"
+						female_name="<span color='#DA0000'>"+_"female^captured"+"</span>"
 						description=_"Captured units have a increased recall cost untill you recall them once (recall+(10xlevel))."
 					[/display]
 				[/abilities]
@@ -242,7 +244,7 @@
 		[/object]
 		
    [/modify_unit]
-   {NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Captured" {NFWME_COLOR_RED}}
+   {NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Capture" {NFWME_COLOR_RED}}
 #enddef
 
 #define NFWME_concussion_WOUND
@@ -255,7 +257,8 @@
 				[abilities]
 					[display]
 						id=concussion_display
-						name="<span color='#DA0000'>"+_"concussion"+"</span>"
+						name="<span color='#DA0000'>"+_"concussed"+"</span>"
+						female_name="<span color='#DA0000'>"+_"female^concussed"+"</span>"
 						description=_"Magical damage -25%"
 					[/display]
 				[/abilities]
@@ -296,6 +299,7 @@
 					[display]
 						id=coward_display
 						name="<span color='#DA0000'>"+_"coward"+"</span>"
+						female_name="<span color='#DA0000'>"+_"female^coward"+"</span>"
 						description=_"Accuracy -15%
 Redeem yourself by defeating an opponent with at least 1 level higher than you or at his higher level."
 					[/display]
@@ -308,7 +312,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
 
 		[/object]
 	[/modify_unit]
-	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Coward" {NFWME_COLOR_RED}}
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Cowardice" {NFWME_COLOR_RED}}
 #enddef
 
 #define NFWME_dead_WOUND
@@ -323,7 +327,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
 		[/trait]
 	[/modify_unit]
 
-	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Dead" {NFWME_COLOR_RED}}
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Death" {NFWME_COLOR_RED}}
     
 #enddef
 
@@ -706,7 +710,8 @@ Face your fears to try and overcome them."
 				[abilities]
 					[display]
 						id=infection_display
-						name="<span color='#DA0000'>"+_"infection"+"</span>"
+						name="<span color='#DA0000'>"+_"infected"+"</span>"
+						female_name="<span color='#DA0000'>"+_"female^infected"+"</span>"
 						description=_"10% chance of being poisoned every turn."
 					[/display]
 				[/abilities]
@@ -742,7 +747,8 @@ Face your fears to try and overcome them."
 				[abilities]
 					[display]
 						id=insanity_display
-						name="<span color='#DA0000'>"+_"insanity"+"</span>"
+						name="<span color='#DA0000'>"+_"insane"+"</span>"
+						female_name="<span color='#DA0000'>"+_"female^insane"+"</span>"
 						description=_"Melee attacks gain berserk."
 					[/display]
 				[/abilities]
@@ -792,6 +798,7 @@ Face your fears to try and overcome them."
 					[display]
 						id=maimed_display
 						name="<span color='#DA0000'>"+_"maimed"+"</span>"
+						female_name="<span color='#DA0000'>"+_"female^maimed"+"</span>"
 						description=_"-20% HP"
 					[/display]
 				[/abilities]
@@ -800,7 +807,7 @@ Face your fears to try and overcome them."
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_maimed_Healing
-						description= _"Recover from maimed."
+						description= _"Recover from mutilation."
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -817,7 +824,7 @@ Face your fears to try and overcome them."
 			[/effect]
 		[/object]
 	[/modify_unit]
-	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Maimed" {NFWME_COLOR_RED}}
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Mutilation" {NFWME_COLOR_RED}}
 #enddef
 
 #define NFWME_necrosis_WOUND
@@ -830,7 +837,8 @@ Face your fears to try and overcome them."
 				[abilities]
 					[display]
 						id=necrosis_display
-						name="<span color='#DA0000'>"+_"necrosis"+"</span>"
+						name="<span color='#DA0000'>"+_"necrotic"+"</span>"
+						female_name="<span color='#DA0000'>"+_"female^necrotic"+"</span>"
 						description=_"You are closer to undeath.
 Arcane resistance -30%"
 					[/display]
@@ -961,6 +969,7 @@ All damage is reduced by 20% and blade resistance is lowered by 30%. You will ne
 					[display]
 						id=sick_display
 						name="<span color='#DA0000'>"+_"sick"+"</span>"
+						female_name="<span color='#DA0000'>"+_"female^sick"+"</span>"
 						description=_"20% chance of being slowed every turn."
 					[/display]
 				[/abilities]
@@ -969,7 +978,7 @@ All damage is reduced by 20% and blade resistance is lowered by 30%. You will ne
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_sick_Healing
-						description= _"Recover from sick."
+						description= _"Recover from sickness."
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -983,7 +992,7 @@ All damage is reduced by 20% and blade resistance is lowered by 30%. You will ne
 		[/object]
 		
 	[/modify_unit]
-	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Sick" {NFWME_COLOR_RED}}
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Sickness" {NFWME_COLOR_RED}}
 #enddef
 
 #define NFWME_stepped_on_lego_WOUND
