--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -109,8 +109,12 @@
 			{CLEAR_VARIABLE nfwe_already_dead}
 		[/then]
 		[else]
+			[store_unit_type]
+				type=$unit.type
+				variable=nfwe_wound_type
+			[/store_unit_type]
 			[fire_event]
-				name=nfwme_rand_wound
+				name=nfwe_rand_wound
 				[primary_unit]
 					{EVENT_UNIT}
 				[/primary_unit]
@@ -123,8 +127,8 @@
 [/event]
 
 [event]
-	name=nfwme_rand_wound
-	id=nfwme_rand_wound_id
+	name=nfwe_rand_wound
+	id=nfwe_rand_wound_id
 	first_time_only=no
 	{VARIABLE_OP rand_wound rand(1..140)}
 	[switch]
@@ -145,7 +149,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -233,7 +237,7 @@
 
 						[else]
 							[fire_event]
-								name=nfwme_rand_wound
+								name=nfwe_rand_wound
 								[primary_unit]
 									{EVENT_UNIT}
 								[/primary_unit]
@@ -246,7 +250,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -268,7 +272,7 @@
 				[/have_location]
 				[then]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -297,7 +301,7 @@
 						[/elseif]
 						[else]
 							[fire_event]
-								name=nfwme_rand_wound
+								name=nfwe_rand_wound
 								[primary_unit]
 									{EVENT_UNIT}
 								[/primary_unit]
@@ -325,7 +329,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -352,7 +356,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -378,7 +382,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -399,20 +403,11 @@
 					[/filter]
 				[/have_location]
 				[or]
-					[have_location]
-						{EVENT_UNIT}
-						[filter]						
-							[filter_wml]
-								[movetype]
-									name=undeadspirit
-								[/movetype]
-							[/filter_wml]
-						[/filter]
-					[/have_location]							
+					{VARIABLE_CONDITIONAL nfwe_wound_type.movement_type equals undeadspirit}
 				[/or]				
 				[then]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -448,7 +443,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -477,20 +472,11 @@
 					[/have_location]						
 				[/or]
 				[or]
-					[have_location]
-						{EVENT_UNIT}
-						[filter]						
-							[filter_wml]
-								[movetype]
-									name=undeadspirit
-								[/movetype]
-							[/filter_wml]
-						[/filter]
-					[/have_location]							
+					{VARIABLE_CONDITIONAL nfwe_wound_type.movement_type equals undeadspirit}						
 				[/or]
 				[then]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -517,16 +503,7 @@
 							[/filter]
 						[/have_location]
 						[or]
-							[have_location]
-								{EVENT_UNIT}
-								[filter]						
-									[filter_wml]
-										[movetype]
-											name=undeadspirit
-										[/movetype]
-									[/filter_wml]
-								[/filter]
-							[/have_location]							
+							{VARIABLE_CONDITIONAL nfwe_wound_type.movement_type equals undeadspirit}						
 						[/or]							
 					[/not]
 				[/and]
@@ -535,7 +512,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -556,20 +533,11 @@
 					[/filter]
 				[/have_location]
 				[or]
-					[have_location]
-						{EVENT_UNIT}
-						[filter]						
-							[filter_wml]
-								[movetype]
-									name=undeadspirit
-								[/movetype]
-							[/filter_wml]
-						[/filter]
-					[/have_location]							
+					{VARIABLE_CONDITIONAL nfwe_wound_type.movement_type equals undeadspirit}						
 				[/or]							
 				[then]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -592,7 +560,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -628,7 +596,7 @@
 				[/or]					
 				[then]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -653,7 +621,7 @@
 				[/have_location]					
 				[then]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -681,7 +649,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -709,7 +677,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -731,7 +699,7 @@
 				[/have_location]
 				[then]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -759,7 +727,7 @@
 				[/or]
 				[then]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -795,7 +763,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -817,7 +785,7 @@
 				[/have_location]
 				[then]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -842,7 +810,7 @@
 				[/have_location]
 				[then]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -861,18 +829,7 @@
 			[if]
 				{NFWME_undead_ENABLED}
 				[and]
-					[not]
-						[have_location]
-							{EVENT_UNIT}
-							[filter]
-								[filter_wml]
-									[movetype]
-										name=undeadspirit
-									[/movetype]
-								[/filter_wml]	
-							[/filter]
-						[/have_location]
-					[/not]
+					{VARIABLE_CONDITIONAL nfwe_wound_type.movement_type not_equals undeadspirit}
 				[/and]
 				[then]
 					{NFWME_undead_ghost_WOUND}
@@ -885,7 +842,7 @@
 				[/elseif]				
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -921,7 +878,7 @@
 				[/elseif]	
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -944,7 +901,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -964,7 +921,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
@@ -984,7 +941,7 @@
 				[/then]
 				[else]
 					[fire_event]
-						name=nfwme_rand_wound
+						name=nfwe_rand_wound
 						[primary_unit]
 							{EVENT_UNIT}
 						[/primary_unit]
