--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -942,7 +942,7 @@ All damage is reduced by 20% and blade resistance is lowered by 30%. You will ne
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_amnesia_Healing
-						description= _"Recover from Amnesia."
+						description= _"Recover from amnesia."
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -1377,7 +1377,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_wild_magic_Healing
-						description= _"Recover from Wild Magic."
+						description= _"Recover from wild magic."
 						[effect]
 							apply_to=new_ability
 							[abilities]
