--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -20,11 +20,11 @@
         id=nfw_catch_last_breath
     [/remove_event]
     [remove_event]
-        id=nfwme_rand_wound_id
+        id=nfwe_rand_wound_id
     [/remove_event]
 	[event]
-		name=nfwme_rand_wound
-		id=nfwme_rand_wound_id
+		name=nfwe_rand_wound
+		id=nfwe_rand_wound_id
 		first_time_only=no
 		{NFWME_dead_WOUND}
 	[/event]
